[gd_scene load_steps=5 format=2]

[ext_resource path="res://RPG/Player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player" type="Node2D"]
script = ExtResource( 1 )

[node name="WeaponSprite" type="AnimatedSprite" parent="."]
position = Vector2( 228.843, 133.646 )
scale = Vector2( 0.25, 0.75 )
frames = SubResource( 2 )

[node name="BodySprite" type="AnimatedSprite" parent="."]
position = Vector2( 196.6, 133.554 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="RightCornerBody" type="Position2D" parent="BodySprite"]
position = Vector2( 32.1148, -31.9832 )
scale = Vector2( 1.33333, 1.33333 )
